--- a/static/index.html
+++ b/static/index.html
@@ -150,6 +150,40 @@
     </div>
 </div>
 
+<!-- Task Details Modal -->
+<div class="modal fade" id="taskDetailsModal" tabindex="-1" aria-labelledby="taskDetailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="taskDetailsModalLabel">Task Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <dl class="row">
+                    <dt class="col-sm-4">Title:</dt>
+                    <dd class="col-sm-8" id="taskTitle"></dd>
+
+                    <dt class="col-sm-4">List:</dt>
+                    <dd class="col-sm-8" id="taskList"></dd>
+
+                    <dt class="col-sm-4">Status:</dt>
+                    <dd class="col-sm-8" id="taskStatus"></dd>
+
+                    <dt class="col-sm-4">Created:</dt>
+                    <dd class="col-sm-8" id="taskCreated"></dd>
+
+                    <dt class="col-sm-4" id="taskDoneOnLabel">Done On:</dt>
+                    <dd class="col-sm-8" id="taskDoneOn"></dd>
+                </dl>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
