Add due_on and due_by fields to backend

--- a/static/index.html
+++ b/static/index.html
@@ -169,6 +169,12 @@
                     <dt class="col-sm-4">Status:</dt>
                     <dd class="col-sm-8" id="taskStatus"></dd>
 
+                    <dt class="col-sm-4" id="taskDueOnLabel">Due On:</dt>
+                    <dd class="col-sm-8" id="taskDueOn"></dd>
+
+                    <dt class="col-sm-4" id="taskDueByLabel">Due By:</dt>
+                    <dd class="col-sm-8" id="taskDueBy"></dd>
+
                     <dt class="col-sm-4">Created:</dt>
                     <dd class="col-sm-8" id="taskCreated"></dd>
 
