--- a/static/index.html
+++ b/static/index.html
@@ -6,71 +6,8 @@
     <title>Todo List App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
-<style>
-    @keyframes fadeOut {
-        from { opacity: 1; }
-        to { opacity: 0; }
-    }
-
-    @keyframes fadeIn {
-        from { opacity: 0; }
-        to { opacity: 1; }
-    }
-
-    .fade-out {
-        animation: fadeOut 0.5s forwards;
-    }
-
-    .fade-in {
-        animation: fadeIn 0.5s forwards;
-    }
-    .list-group-item:hover {
-        background-color: #f8f9fa !important; /* This is the Bootstrap bg-light color. Use !important to override default styles if necessary. */
-    }
-    .add-item-btn {
-        position: fixed; /* or 'absolute' if you only want it moving with pane scrolling */
-        bottom: 20px; /* Distance from bottom */
-        right: 20px; /* Distance from right, adjust based on your layout */
-        z-index: 100; /* Ensure it's above other content */
-        width: 50px; /* Ensure width and height are equal */
-        height: 50px; /* Ensure width and height are equal */
-        border: none;
-        cursor: pointer; /* Ensure it looks clickable */
-        display: flex; /* Center the icon horizontally */
-        background-color: darkorange;
-        color: white;
-        align-items: center; /* Center the icon vertically */
-        justify-content: center; /* Center the icon horizontally */
-    }
-    .add-item-btn .bi {
-        font-size: 3rem; /* Adjust based on your layout */
-    }
-    .custom-context-menu {
-        position: fixed;
-        z-index: 1000;
-        width: 200px;
-        background: white;
-        border-radius: 5px;
-        box-shadow: 0 2px 5px rgba(0,0,0,.15);
-        padding: 10px 0;
-    }
-    .custom-context-menu li {
-        padding: 8px 15px;
-        cursor: pointer;
-    }
-    .custom-context-menu li:hover {
-        background-color: #f0f0f0;
-    }
-    #alertPlaceholder {
-        position: fixed;
-        top: 10px; /* Adjust based on your header/nav bar */
-        left: 70%;
-        transform: translateX(-50%);
-        width: auto;
-        z-index: 1050; /* Ensure it's above most other content */
-    }
-</style>
 
 <body>
 <div id="alertPlaceholder"></div>
