Add all day option and better due printing

--- a/static/index.html
+++ b/static/index.html
@@ -106,6 +106,9 @@
                     <dt class="col-sm-4">Status:</dt>
                     <dd class="col-sm-8" id="taskStatus"></dd>
 
+                    <dt class="col-sm-4">All day:</dt>
+                    <dd class="col-sm-8" id="taskAllDay"></dd>
+
                     <dt class="col-sm-4" id="taskDueOnLabel">Due On:</dt>
                     <dd class="col-sm-8" id="taskDueOn"></dd>
 
