Add form validation

--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,7 @@
     </div>
 </div>
 
-<!-- New Item Modal -->
+<!-- New Task Modal -->
 <div class="modal fade" id="addItemModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -66,7 +66,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form id="addItemForm">
+                <form id="addItemForm" novalidate>
                     <div class="mb-3">
                         <label for="taskTitleInput" class="form-label">Title</label>
                         <input type="text" class="form-control" id="taskTitleInput" required>
