--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form id="addItemForm" novalidate>
+                <form id="addItemForm">
                     <div class="mb-3">
                         <label for="taskTitleInput" class="form-label">Title</label>
                         <input type="text" class="form-control" id="taskTitleInput" required>
