--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List App</title>
+    <title>Task List App</title>
+    <link rel="icon" type="image/webp" href="/images/favicon.webp">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
@@ -18,14 +19,15 @@
             <h4 class="mt-2">Lists</h4>
             <div id="listsDisplay" class="list-group"></div>
             <hr>
-            <button id="createListBtn" class="btn btn-primary my-2" data-bs-toggle="modal" data-bs-target="#newListModal">New List</button>
+            <button id="createListBtn" class="btn btn-primary my-2" data-bs-toggle="modal" data-bs-target="#addListModal">New List</button>
             <hr>
         </div>
         <!-- Main pane for list details -->
         <div class="col-md-9">
-            <div id="listItems" class="p-3">
+            <div id="tasksDisplay" class="p-3">
                 Select a list to view items.
             </div>
+            <div id="addTaskButtonContainer"></div>
         </div>
     </div>
 </div>
@@ -36,116 +38,7 @@
     </ul>
 </div>
 
-<!-- New List Modal -->
-<div class="modal fade" id="newListModal" tabindex="-1" aria-labelledby="newListModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="newListModalLabel">New List</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="newListForm">
-                    <div class="mb-3">
-                        <label for="listNameInput" class="form-label">List Name</label>
-                        <input type="text" class="form-control" id="listNameInput" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Create List</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
 
-<!-- New Task Modal -->
-<div class="modal fade" id="addItemModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="addItemModalLabel">Add New Task</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="addItemForm">
-                    <div class="mb-3">
-                        <label for="taskTitleInput" class="form-label">Title</label>
-                        <input type="text" class="form-control" id="taskTitleInput" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="taskListDropdown" class="form-label">List</label>
-                        <select class="form-select" id="taskListDropdown" required>
-                            <!-- Options will be dynamically added here -->
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="dueDateTypeSelect" class="form-label">Due Date</label>
-                        <select class="form-select" id="dueDateTypeSelect">
-                            <option value="none" selected>None</option>
-                            <option value="dueOn">Due On</option>
-                            <option value="dueBy">Due By</option>
-                        </select>
-                    </div>
-                    <div class="mb-3 d-none" id="dateTimeOptions">
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="taskAllDayInput" checked>
-                            <label class="form-check-label" for="taskAllDay">All Day</label>
-                        </div>
-                        <div class="mb-3">
-                            <label for="taskDueDateTime" class="form-label">Date</label>
-                            <input type="date" class="form-control" id="taskDueDateTime">
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="saveTaskButton">OK</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Task Details Modal -->
-<div class="modal fade" id="taskDetailsModal" tabindex="-1" aria-labelledby="taskDetailsModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="taskDetailsModalLabel">Task Details</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <dl class="row">
-                    <dt class="col-sm-4">Title:</dt>
-                    <dd class="col-sm-8" id="taskTitle"></dd>
-
-                    <dt class="col-sm-4">List:</dt>
-                    <dd class="col-sm-8" id="taskList"></dd>
-
-                    <dt class="col-sm-4">Status:</dt>
-                    <dd class="col-sm-8" id="taskStatus"></dd>
-
-                    <dt class="col-sm-4">All day:</dt>
-                    <dd class="col-sm-8" id="taskAllDay"></dd>
-
-                    <dt class="col-sm-4" id="taskDueOnLabel">Due On:</dt>
-                    <dd class="col-sm-8" id="taskDueOn"></dd>
-
-                    <dt class="col-sm-4" id="taskDueByLabel">Due By:</dt>
-                    <dd class="col-sm-8" id="taskDueBy"></dd>
-
-                    <dt class="col-sm-4">Created:</dt>
-                    <dd class="col-sm-8" id="taskCreated"></dd>
-
-                    <dt class="col-sm-4" id="taskDoneOnLabel">Done On:</dt>
-                    <dd class="col-sm-8" id="taskDoneOn"></dd>
-                </dl>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
