Show completed date and make add task button round

--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
             <div id="tasksDisplay" class="p-3">
                 Select a list to view items.
             </div>
-            <div id="addTaskButtonContainer"></div>
+            <div id="addTaskButtonContainer" class="d-flex justify-content-end"></div>
         </div>
     </div>
 </div>
