Cleanup parts of task ui manager code

--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,8 @@
                 <a id="createListBtn" href="#" class="list-group-item list-group-item-action d-flex " data-bs-toggle="modal" data-bs-target="#addListModal">
                     <i class="bi bi-plus-circle-fill me-2"></i> New List
                 </a>
-                <a id="createFilteredListBtn" href="#" class="list-group-item list-group-item-action d-flex">
+                <a id="createFilteredListBtn" href="#" class="list-group-item list-group-item-action d-flex"
+                   data-bs-toggle="tooltip" data-bs-placement="top" title="Not implemented yet">
                     <i class="bi bi-filter-circle-fill me-2"></i> New Filtered List
                 </a>
             </div>
