--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,58 @@
         <li id="deleteTask">Delete Task</li>
     </ul>
 </div>
+
+<!-- Modal for adding a new task -->
+<div class="modal fade" id="addTaskModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add New Task</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="addItemForm">
+                    <!-- Error message section, initially hidden -->
+                    <div class="alert alert-danger d-none" id="formErrorAlert"></div>
+
+                    <div class="mb-3">
+                        <label for="taskTitleInput" class="form-label">Title</label>
+                        <input type="text" class="form-control" id="taskTitleInput" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="taskListDropdown" class="form-label">List</label>
+                        <select class="form-select" id="taskListDropdown" required>
+                            <!-- Options will be dynamically added here -->
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="dueDateTypeSelect" class="form-label">Due Date</label>
+                        <select class="form-select" id="dueDateTypeSelect">
+                            <option value="none" selected>None</option>
+                            <option value="dueOn">Due On</option>
+                            <option value="dueBy">Due By</option>
+                        </select>
+                    </div>
+                    <div class="mb-3 d-none" id="dateTimeOptions">
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="taskAllDayInput" checked>
+                            <label class="form-check-label" for="taskAllDayInput">All Day</label>
+                        </div>
+                        <div class="mb-3">
+                            <label for="taskDueDateTime" class="form-label">Date</label>
+                            <input type="date" class="form-control" id="taskDueDateTime">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="saveTaskButton">OK</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="app.js" type="module"></script>
