--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
         </div>
         <!-- Main pane for list details -->
         <div class="col-md-9">
-            <div id="tasksDisplay" class="p-3">
+            <div id="tasksDisplay" class="list-group list-group-flush list-group-item-action p-3">
                 Select a list to view items.
             </div>
             <div id="addTaskButtonContainer" class="d-flex justify-content-end"></div>
