Make side pane fill the whole page height

--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,8 @@
 
 <body>
 <div id="alertPlaceholder"></div>
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid vh-100 d-flex flex-column">
+    <div class="row d-flex flex-grow-1">
         <!-- Side pane for lists -->
         <div class="col-md-3 bg-light border-right">
             <h4 class="mt-2">Lists</h4>
