Make the add task button sticky

--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
             <div id="tasksDisplay" class="list-group list-group-flush list-group-item-action p-3">
                 Select a list to view items.
             </div>
-            <div id="addTaskButtonContainer" class="d-flex justify-content-end"></div>
+            <div id="addTaskButtonContainer" class="d-flex justify-content-end sticky-bottom"></div>
         </div>
     </div>
 </div>
