--- a/static/index.html
+++ b/static/index.html
@@ -46,6 +46,43 @@
     </ul>
 </div>
 
+<!-- Modal for adding a new list -->
+<div class="modal fade" id="addListModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addListModalLabel">New List</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form id="addListForm">
+                    <div class="mb-3">
+                        <!-- First Field Row -->
+                        <div class="row g-2 align-items-center">
+                            <div class="col-md-2">
+                                <label for="listNameInput" class="form-label">Name:</label>
+                            </div>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" id="listNameInput" required>
+                            </div>
+                        </div>
+                        <!-- Second Field Row -->
+                        <div class="row g-2 align-items-center">
+                            <div class="col-md-2">
+                                <label for="listColourInput" class="form-label">Colour:</label>
+                            </div>
+                            <div class="col-md-6">
+                                <input type="color" class="form-control form-control-color" value="#ffffff" id="listColourInput">
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary float-end">Create List</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Modal for adding a new task -->
 <div class="modal fade" id="addTaskModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
