Automatically close sidebar if a list is chosen

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
 <div class="container-fluid p-0 d-flex h-100">
         <!-- Side pane for lists -->
         <div tabindex="-1" id="sidebar" class="offcanvas-sm offcanvas-start w-auto hide">
-            <div class="offcanvas-body d-flex flex-column flex-shrink-0 p-3 ">
+            <div class="offcanvas-body d-flex flex-column flex-shrink-0 p-3 bg-light">
                 <h4 class="mt-2">Lists</h4>
                 <div id="listsDisplay" class="list-group list-group-flush list-group-item-action list-group-item-light"></div>
                 <hr>
@@ -38,7 +38,7 @@
                     <i class="bi bi-list fs-1"></i>
                 </a>
                 <div id="headerContainer">
-                    <h3 class="mb-0" id="listHeader">Select a list</h3> <!-- Initial static header text -->
+                    <h3 class="mb-0 ms-3" id="listHeader">Select a list</h3> <!-- Initial static header text -->
                 </div>
             </div>
             <div id="tasksDisplay" class="list-group list-group-flush list-group-item-action p-3 pt-0">
