Adjust date handling in the rest of the code

--- a/static/index.html
+++ b/static/index.html
@@ -156,8 +156,8 @@
                         <label for="dueDateTypeSelect" class="form-label">Due Date</label>
                         <select class="form-select" id="dueDateTypeSelect">
                             <option value="none" selected>None</option>
-                            <option value="dueOn">Due On</option>
-                            <option value="dueBy">Due By</option>
+                            <option value="due_on">On</option>
+                            <option value="due_by">By</option>
                         </select>
                     </div>
                     <div class="mb-3 d-none" id="dateTimeOptions">
@@ -210,8 +210,8 @@
                             <label for="dueDateTypeEditSelect" class="form-label">Due Date</label>
                             <select class="form-select" id="dueDateTypeEditSelect">
                                 <option value="none" selected>None</option>
-                                <option value="dueOn">Due On</option>
-                                <option value="dueBy">Due By</option>
+                                <option value="due_on">On</option>
+                                <option value="due_by">By</option>
                             </select>
                         </div>
                         <div class="mb-3 d-none" id="dateTimeEditOptions">
