Add priority to UI

--- a/static/index.html
+++ b/static/index.html
@@ -178,6 +178,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="mb-3">
+                        <label for="prioritySelect" class="form-label">Priority</label>
+                        <select class="form-select" id="prioritySelect">
+                            <option value="2">Highest</option>
+                            <option value="1">High</option>
+                            <option value="0" selected>Normal</option>
+                            <option value="-1">Low</option>
+                            <option value="-2">Lowest</option>
+                        </select>
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
@@ -231,6 +241,16 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="priorityEditSelect" class="form-label">Priority</label>
+                            <select class="form-select" id="priorityEditSelect">
+                                <option value=2>Highest</option>
+                                <option value=1>High</option>
+                                <option value=0>Normal</option>
+                                <option value=-1>Low</option>
+                                <option value=-2>Lowest</option>
+                            </select>
                         </div>
                     </form>
                     <dt class="col-sm-4">List:</dt>
