Improve positioning of list name header at medium screen and up

--- a/static/index.html
+++ b/static/index.html
@@ -33,12 +33,12 @@
         </div>
         <div id="mainPanel" class="flex-fill">
         <!-- Main pane for list details -->
-            <div class="d-flex flex-row mt-3 align-items-center">
+            <div class="d-flex flex-row mt-md-3 align-items-center">
                 <a href="#" class="btn d-md-none" data-bs-toggle="offcanvas" data-bs-target="#sidebar">
                     <i class="bi bi-list fs-1"></i>
                 </a>
                 <div id="headerContainer">
-                    <h3 class="mb-0 ms-3" id="listHeader">Select a list</h3> <!-- Initial static header text -->
+                    <h3 class="mb-0 mb-md-3 ms-3" id="listHeader">Select a list</h3> <!-- Initial static header text -->
                 </div>
             </div>
             <div id="tasksDisplay" class="list-group list-group-flush list-group-item-action p-3 pt-0">
