Improve background colors

--- a/static/index.html
+++ b/static/index.html
@@ -10,11 +10,11 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-body-light">
 <div id="alertPlaceholder"></div>
 <div class="container-fluid p-0 d-flex h-100">
         <!-- Side pane for lists -->
-        <div tabindex="-1" id="sidebar" class="offcanvas-sm offcanvas-start w-auto hide">
+        <div tabindex="-1" id="sidebar" class="offcanvas-sm offcanvas-start w-auto hide bg-body-secondary" style="--bs-bg-opacity: .3;">
             <div class="offcanvas-body d-flex flex-column flex-shrink-0 p-3 bg-light">
                 <h4 class="mt-2">Lists</h4>
                 <div id="listsDisplay" class="list-group list-group-flush list-group-item-action list-group-item-light"></div>
